crates/red_knot_python_semantic/resources/mdtest/snapshots/unsupported_bool_conversion.md_-_Different_ways_that_`unsupported-bool-conversion`_can_occur_-_Has_a_`__bool__`_method,_but_has_incorrect_parameters.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unsupported_bool_conversion.md - Different ways that `unsupported-bool-conversion` can occur - Has a `__bool__` method, but has incorrect parameters
mdtest path: crates/red_knot_python_semantic/resources/mdtest/diagnostics/unsupported_bool_conversion.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotBoolable:
2 |     def __bool__(self, foo):
3 |         return False
4 | 
5 | a = NotBoolable()
6 | 
7 | # error: [unsupported-bool-conversion]
8 | 10 and a and True
```

# Diagnostics

```
error: lint:unsupported-bool-conversion: Boolean conversion is unsupported for type `NotBoolable`
 --> src/mdtest_snippet.py:8:8
  |
7 | # error: [unsupported-bool-conversion]
8 | 10 and a and True
  |        ^
  |
info: `__bool__` methods must only have a `self` parameter
 --> src/mdtest_snippet.py:2:9
  |
1 | class NotBoolable:
2 |     def __bool__(self, foo):
  |         --------^^^^^^^^^^^ Incorrect parameters
  |         |
  |         Method defined here
3 |         return False
  |

```
